...
          <View className="flex-row items-center">
            <Image
              source={require('../../assets/icons/youtubeIcon.png')}
              className="mr-1 h-7 w-10"
              resizeMode="contain"
            />
            <Text className="text-xl font-semibold tracking-tighter text-white">YTube</Text>
          </View>
        )}
      </View>

      <View className="flex-row items-center gap-x-4">
        {onSearchPress ? (
          <Pressable testID="header-search" onPress={onSearchPress}>
            <Icon.Search color="#fff" strokeWidth={1.2} width={22} height={22} />
          </Pressable>
        ) : null}
      </View>
    </View>
  );
...
