...
      }}
    >
      <Tab.Screen
        name="Home"
        component={HomeScreen}
        options={{
          title: 'Início',
          tabBarIcon: ({ color }) => <Icon.Home color={color} width={22} height={22} />,
        }}
      />
      <Tab.Screen
        name="Shorts"
        component={ShortsScreen}
...
        }}
      />
      <Tab.Screen
        name="Subscriptions"
        component={SubscriptionsScreen}
        options={{
          title: 'Inscrições',
          tabBarIcon: ({ color }) => <Icon.Youtube color={color} width={22} height={22} />,
        }}
      />
      <Tab.Screen
        name="Library"
        component={LibraryScreen}
...
