appId: com.hak.youtube
---
- launchApp
- extendedWaitUntil:
    visible: "YTube"
    timeout: 120000
- assertVisible: "YTube"
- assertVisible: "Início"
- tapOn: "Inscrições"
- assertVisible: "Inscrições"
- tapOn: "Biblioteca"
- assertVisible: "Biblioteca"
- tapOn: "Início"
- assertVisible: "YTube"
